hphp/test/zend/good/Zend/tests/heredoc_013.php.expectf

Fatal error: Only double-quoted strings may be prefixed. in %s/heredoc_013.php on line 4
